# fslam_ros_docker_VI

./: .gitignore  Dockerfile
FSLAM/: CMakeLists.txt
FSLAM/src/: main.cpp
FSLAM/src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  IMUPreintegrator.cpp  IMUPreintegrator.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
FSLAM/src/IOWrapper/: ImageRW.h
FSLAM/src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
FSLAM/src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
FSLAM/src/Indirect/: Detector.cpp  Frame.cpp  Frame.h  LoopCloser.cpp  LoopCloser.h  Map.cpp  Map.h  Matcher.cpp  Matcher.h  Sim3Solver.cpp
FSLAM/src/OptimizationBackend/: AccumulatedTopHessian.cpp  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h
FSLAM/src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  settings.cpp  settings.h
fslam_ros/: CMakeLists.txt  package.xml
fslam_ros/cmake/: FindG2O.cmake
fslam_ros/src/: main.cpp  main_compressed_img.cpp
res/: camera_oakd_pro.txt
