<?xml version="1.0"?>
<package format="2">
  <name>fslam_ros</name>
  <version>1.0.0</version>
  <description>ROS Wrapper FSLAM.</description>

  <author email="engelj-@in-dot-tum-dot.de">Jakob Engel</author>
  <maintainer email="engelj-@in-dot-tum-dot.de">Jakob Engel</maintainer>
  <license>see http://vision.in.tum.de/dso</license>
  <url type="website">http://vision.in.tum.de/dso</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>DBoW3</depend>
  <depend>SuiteParse</depend>
  <depend>Pangolin</depend>
  <depend>Eigen3</depend>
  <depend>Boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>